Inserção de Menu e Cadastro

--- a/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas.csproj
+++ b/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cadastro.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="Models\Endereco.cs" />
+    <Compile Include="Models\Pessoa.cs" />
+    <Compile Include="Models\PessoaFisica.cs" />
+    <Compile Include="Models\PessoaJuridica.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
