--- a/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas.csproj
+++ b/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas.csproj
@@ -43,14 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cadastro.cs" />
+    <Compile Include="Crud.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Models\Endereco.cs" />
     <Compile Include="Models\Pessoa.cs" />
     <Compile Include="Models\PessoaFisica.cs" />
     <Compile Include="Models\PessoaJuridica.cs" />
+    <Compile Include="ModuloPF.cs" />
+    <Compile Include="ModuloPJ.cs" />
+    <Compile Include="OperacaoPF.cs" />
+    <Compile Include="OperacaoPJ.cs" />
+    <Compile Include="OperacoesEndereco.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tela.cs" />
     <Compile Include="Validacao.cs" />
   </ItemGroup>
   <ItemGroup>
