--- a/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas.csproj
+++ b/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas/TrabalhoEmDupla2CadastroDePessoas.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tela.cs" />
-    <Compile Include="Validacao.cs" />
+    <Compile Include="Valida.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
