birb, validação, ordenação por id

--- a/TrabalhoEmDupla2CadastroDePessoas/WindowsForms/WindowsForms.csproj
+++ b/TrabalhoEmDupla2CadastroDePessoas/WindowsForms/WindowsForms.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -84,6 +85,9 @@
       <Project>{b2da54aa-0155-4fce-9560-e07912d0e3a2}</Project>
       <Name>TrabalhoEmDupla2CadastroDePessoas</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\200.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
